--- a/VQCSDK/res/values/strings.xml
+++ b/VQCSDK/res/values/strings.xml
@@ -86,6 +86,7 @@
     <string name="logout_successful">Bạn đã đăng xuất thành công</string>
     <string name="subject">Báo lỗi game: </string>
     <string name="send_email_by">Gửi email bằng</string>
+    <string name="reload">Reload</string>
     
     
     
